ListViewTree: tweak position of the loading spinner so it is no longer cut off

--- a/src/scss/themes/fylr/components/_list-view-tree.scss
+++ b/src/scss/themes/fylr/components/_list-view-tree.scss
@@ -19,7 +19,7 @@
 
 	.svg-spinner {
 		position: relative;
-		left: -3px;
+		left: 1px;
 		width: 12px;
 		height: 12px;
 	}
